kubernetes/apps/paperless/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: paperless
spec:
  selector:
    app: redis
  ports:
    - port: 6379
